# INDXParse

./: .gitignore  .pre-commit-config.yaml  BinaryParser.py  CHANGELOG  CONTRIBUTORS.txt  FileMap.py  INDXFind.py  INDXParse.py  INDXTemplate.bt  MFT.py  MFTINDX.py  MFTView.py  Makefile  Progress.py  README  SDS.py  SDS_get_index.py  SortedCollection.py  THIRD_PARTY_LICENSES.md  carve_mft_records.py  extract_mft_record_slack.py  fuse-mft.py  get_file_info.py  import_mft_to_es.py  import_mft_ts_to_es.py  ip2.py  list_mft.py  setup.cfg  setup.py  simple_es.py  tree_mft.py
.github/workflows/: ci.yml
INDXParse/: BinaryParser.py  FileMap.py  INDXParse.py  MFT.py  MFTINDX.py  MFTView.py  Progress.py  SDS.py  SDS_get_index.py  __init__.py  carve_mft_records.py  extract_mft_record_slack.py  fuse-mft.py  get_file_info.py  list_mft.py  tree_mft.py
indxparse/: BinaryParser.py  FileMap.py  INDXFind.py  INDXParse.py  MFT.py  MFTINDX.py  MFTView.py  Progress.py  SDS.py  SDS_get_index.py  __init__.py  carve_mft_records.py  extract_mft_record_slack.py  fuse-mft.py  get_file_info.py  list_mft.py  py.typed  tree_mft.py
tests/: Makefile
tests/MFTINDX/: 7-ntfs-undel.dd.d.txt  7-ntfs-undel.dd.l.txt  7-ntfs-undel.dd.m.txt  7-ntfs-undel.dd.mft.d.txt  7-ntfs-undel.dd.mft.m.txt  Makefile
tests/list_mft/: 7-ntfs-undel.dd.bodyfile  7-ntfs-undel.dd.mft.bodyfile  7-ntfs-undel.dd.mft.json  Makefile  out.bodyfile  out.json
tests/tree_mft/: 7-ntfs-undel.dd.mft.txt  Makefile
