[metadata]
name = INDXParse
version = attr: INDXParse.__version__
author = Willi Ballenthin
url = https://github.com/williballenthin/INDXParse
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
license_files =
    LICENSE
    THIRD_PARTY_LICENSES.md

[options]
install_requires =
    jinja2
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    INDXParse.py = INDXParse.INDXParse:main
    MFTINDX.py = INDXParse.MFTINDX:main
    SDS_get_index.py = INDXParse.SDS_get_index:main
    extract_mft_record_slack.py = INDXParse.extract_mft_record_slack:main
    get_file_info.py = INDXParse.get_file_info:main
    list_mft.py = INDXParse.list_mft:main
    tree_mft.py = INDXParse.tree_mft:main
    # NOTE: fuse-mft.py will still be exposed as a script if the fuse
    # feature is not installed, but it will not run successfully unless
    # the dependencies of that feature are installed.  This is a known
    # non-obvious dependency specification issue:
    # https://github.com/pypa/pip/issues/9726
    fuse-mft.py = INDXParse.fuse_mft:main [fuse]
    # NOTE: As with fuse-mft.py, MFTView.py requires the wx feature.
    MFTView.py = INDXParse.MFTView:main [wx]

[options.extras_require]
fuse =
    fuse-python
wx =
    wxPython

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
