[metadata]
name = indxparse
version = attr: indxparse.__version__
author = Willi Ballenthin
url = https://github.com/williballenthin/INDXParse
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
license_files =
    LICENSE
    THIRD_PARTY_LICENSES.md

[options]
install_requires =
    jinja2
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    INDXParse.py = indxparse.INDXParse:main
    MFTINDX.py = indxparse.MFTINDX:main
    SDS_get_index.py = indxparse.SDS_get_index:main
    extract_mft_record_slack.py = indxparse.extract_mft_record_slack:main
    get_file_info.py = indxparse.get_file_info:main
    list_mft.py = indxparse.list_mft:main
    tree_mft.py = indxparse.tree_mft:main
    # NOTE: fuse-mft.py will still be exposed as a script if the fuse
    # feature is not installed, but it will not run successfully unless
    # the dependencies of that feature are installed.  This is a known
    # non-obvious dependency specification issue:
    # https://github.com/pypa/pip/issues/9726
    fuse-mft.py = indxparse.fuse_mft:main [fuse]
    # NOTE: As with fuse-mft.py, MFTView.py requires the wx feature.
    MFTView.py = indxparse.MFTView:main [wx]

[options.extras_require]
fuse =
    fuse-python
testing =
    mypy
wx =
    wxPython

[options.package_data]
indxparse = py.typed

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
